Add body background color

--- a/ice-cream-shoppe-client/public/index.html
+++ b/ice-cream-shoppe-client/public/index.html
@@ -45,7 +45,7 @@
     ></script>
     <title>The Ice Cream Shoppe</title>
   </head>
-  <body>
+  <body style="background-color: teal">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
